# advent-of-code2

./: .gitignore  pyproject.toml
puzzles/2021/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10_star.py  11.py  12.py  13.py  14.py  15.py
scripts/: new_puzzle.py
src/advent_of_code/: grid_utils.py  reader.py  tools.py
templates/: solve.txt
